updated page title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-# _config.yml
-title: My Jekyll Site
-description: A simple static site powered by Jekyll
-theme: jekyll-theme-hacker   # Default Jekyll theme (optional)
+title: Dipl.-Ing. Katharina Stengg 
+description: PhD student and project assistant at SERG/AAU
+theme: jekyll-theme-hacker 
