--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Dipl.-Ing. Katharina Stengg 
 description: PhD student and project assistant at SERG/AAU
-theme: minimal-mistakes-jekyll
+theme: jekyll-theme-cayman
 skin: "pink" # Or create your own below
